codex-rs/tui/src/app/snapshots/codex_tui__app__storage_menu__tests__storage_check_connection_failed.snap
---
source: tui/src/app/storage_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Remote connection test
  Stopped at connecting.
    ✗ The remote database could not be reached


› 1. Back to storage
  2. Close

  enter select · esc back
