codex-rs/tui/src/app/snapshots/codex_tui__app__storage_menu__tests__storage_plan_migrate_narrow.snap
---
source: tui/src/app/storage_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, width)"
---
  Migrate this host's history to
  PostgreSQL
  Host: build-host
  Destination: db.internal:5432/codex/
  codex_storage
  This host holds:
    threads: 412
    projects: 5
    queued messages: 2
    goals: 7
    log rows: 90321
    rollout files: 410
  Stop every other Codex process on this
  host before you start.


› 1. Start now: other Codex processes are
     stopped
  2. Back to storage
  3. Close

  enter select · esc back
